--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "skyway-js",
-  "version": "4.4.4",
-  "description": "The official JavaScript SDK for SkyWay",
+  "version": "4.4.4-goto920",
+  "description": "Modified JavaScript SDK for SkyWay",
   "main": "dist/skyway.js",
   "types": "skyway-js.d.ts",
   "scripts": {
